--- a/src/boardgame/AnimationCard.css
+++ b/src/boardgame/AnimationCard.css
@@ -1,5 +1,5 @@
 @media (min-width: 640px) {
-    .list .item{
+    .item{
         transform-style: preserve-3d;
         transform: perspective(1000px);
         cursor: pointer;
@@ -8,74 +8,72 @@
         overflow-y: hidden;
     
     }
-    .list .item:hover{
-        overflow-y: visible;
+    .item:hover{
+        overflow-x: visible;
         transition: .4s;
-        transform: perspective(1000px) translateZ(40px) translateY(-38px);
+        z-index: 400;
+        transform: perspective(1000px) translateZ(200px) translateY(-20px);
     }
     
+    /* .item:hover{
+        z-index: 100;
+        height: 360px;
+        border-radius: 8px;
+        max-height: 600px;
+    }
     .list .item:hover{
         z-index: 100;
         transition: .4s;
         height: 360px;
         border-radius: 8px;
         max-height: 600px;
-    }
-    
+    } */
+/*     
     .list .item .box p {
         opacity: 0;
         visibility: hidden;
-        transition: opacity 0.2s ease-in-out 1s, visibility .2s; /* visibility delay is 2.6s (2s + 0.6s) */
+        transition: opacity 0.2s ease-in-out 1s, visibility .2s; 
     
     }
     
     .list .item:hover .box p {
         opacity: 1;
         visibility: visible;
-        transition: opacity 0.4s 0.2s; /* transition opacity with a delay of 2s */
+        transition: opacity 0.4s 0.2s; 
     }
     
-    
+     */
     
     /* 
-    .list .item:hover + *{
+    .item:hover + *{
         transition: .5s;
         transform: perspective(1000px) translateZ(-50px);
     }
     
-    .list .item:hover + * + *{
+    .item:hover + * + *{
         transition: .5s;
         transform: perspective(1000px) translateZ(-50px);
     }
     
-    .list .item:has(+ *:hover){
+    .item:has(+ *:hover){
         transition: .5s;
         transform: perspective(1000px) translateZ(-50px);
     }
         
     
-    .list .item:has(+ * + *:hover){
+    .item:has(+ * + *:hover){
         transition: .5s;
         transform: perspective(1000px) translateZ(-50px);
     }
          */
 
-  .no-scrollbar::-webkit-scrollbar {
-    display: none;
-  }
-  /* Hide scrollbar for IE, Edge and Firefox */
-  .no-scrollbar {
-    -ms-overflow-style: none;  /* IE and Edge */
-    scrollbar-width: none;  /* Firefox */
-  }
-    
 }
-
+/* 
 @media (max-width: 640px) {
     
 }
-.list .item .box p {
+.item .box p {
     opacity: 0;
     visibility: hidden;
-    transition: opacity 0.2s ease-in-out 1s, visibility .2s; /* visibility delay is 2.6s (2s + 0.6s) */
-}
+    transition: opacity 0.2s ease-in-out 1s, visibility .2s;
+} */
