--- a/src/home/ScrollContent.css
+++ b/src/home/ScrollContent.css
@@ -35,7 +35,37 @@
         transition: opacity 0.4s 0.2s; /* transition opacity with a delay of 2s */
     }
     
+      
+    .scroll-button {
+        position: absolute;
+        background: rgba(255, 255, 255, 0.85);
+        z-index: 400;
+        top: 200px;
+        height: 32px;
+        padding-bottom: 3px;
+        padding-right: 3px;
+        width: 32px;
+        border-radius: 100%;
+        /* position: absolute;
+        transform: translateY(-50%);
+        border: none;
+        padding: 10px;
+        cursor: pointer;
+        font-size: 1.5rem;
+        transition: background 0.3s; */
+    }
     
+    .scroll-button:hover {
+        background: rgba(255, 255, 255, 1);
+    }
+    
+    .scroll-button.left-0 {
+        left: 0;
+    }
+    
+    .scroll-button.right-0 {
+        right: 0;
+    }
     
     /* 
     .list .item:hover + *{
@@ -69,13 +99,19 @@
     scrollbar-width: none;  /* Firefox */
   }
     
+  
+  
 }
 
 @media (max-width: 640px) {
     
-}
-.list .item .box p {
-    opacity: 0;
-    visibility: hidden;
-    transition: opacity 0.2s ease-in-out 1s, visibility .2s; /* visibility delay is 2.6s (2s + 0.6s) */
+    .list .item .box p {
+        opacity: 0;
+        visibility: hidden;
+        transition: opacity 0.2s ease-in-out 1s, visibility .2s; /* visibility delay is 2.6s (2s + 0.6s) */
+    }
+
+    .scroll-button {
+        display: none;
+    }
 }
