--- a/src/room/BoardgameTable.css
+++ b/src/room/BoardgameTable.css
@@ -6,7 +6,7 @@
     cursor: pointer;
     transition: transform 0.6s;
     transition: .6s;
-    overflow-y: hidden;
+    overflow: hidden;
 
   }
   .table-item:hover{
@@ -17,22 +17,50 @@
 .table-item:hover{
   overflow-y: visible;
   transition: .4s;
+  z-index: 30;
   box-sizing: border-box;
-  border: 2px solid #fdba74;
   transform: perspective(1000px) translateZ(84px) ;
 }
 
 .table-item:hover .plus{
   display: flex;
+  z-index: 30;
   transition: .4s;
-  box-sizing: border-box;
+  /* transform: perspective(1000px) translateX(16px) ; */
+    box-sizing: border-box;
 }
+
+.table-item .plus *::before{
+  display: none;
+  transition: 1s;
+}
+
+.table-item:hover .plus *::before{
+    transition: 1s;
+    display: block;
+}
+
+.table-item .plus svg{
+  height: 20px;
+  width: 20px;
+    transition: .2s;
+    stroke: #fdba74;
+}
+
+.table-item:hover .plus div:has(svg) {
+    justify-content: center !important; 
+}
+
+.table-item:hover .plus svg{
+  height: 36px;
+  width: 36px;
+  z-index: 30;
+  display: flex;
+  stroke: #ffffff;
+}
+
 
 .table-item-false .plus{
-  display: none;
+    display: none;
 }
 
-
-.table-item .plus{
-  display: none;
-}
