--- a/src/utils/Background.css
+++ b/src/utils/Background.css
@@ -1,3 +1,3 @@
 .linear{
- background: linear-gradient(360deg, rgb(118, 105, 105) 0%, rgb(255, 252, 250) 85%,rgb(240, 220, 220) 100%);
+ background: linear-gradient(360deg, #1E1E1E 0%, #2E2E2E 75%, #383838 100%);
 }
