--- a/src/home/Home.css
+++ b/src/home/Home.css
@@ -11,7 +11,7 @@
     transition: opacity 0.3s ease, left 0.3s ease;
     }
     .header h1::after {
-        content: ">";
+        content: "See More >";
         width: 128px;
         padding-left: 32px;
         font-size: 16px;
@@ -30,7 +30,7 @@
         opacity: 1;
         right: var(--hover-heading-width); /* Y */
     }
-    .main:hover .header h1::after {
+    /* .main:hover .header h1::after {
         content: ">";
         width: 128px;
         padding-left: 42px;
@@ -53,7 +53,7 @@
         top: 0;
         opacity: 1;
         transition: opacity 0.3s ease, right 0.3s ease;
-    }
+    } */
     
 
     .list .item{
