--- a/src/home/Home.css
+++ b/src/home/Home.css
@@ -1,4 +1,18 @@
 @media (min-width: 640px) {
+    .item--object{
+        transform-style: preserve-3d;
+        transform: perspective(1000px);
+        cursor: pointer;
+        transition: transform 0.6s;
+        transition: .6s;
+        overflow-y: hidden;
+    
+    }
+    .item-object:hover{
+        overflow-x: visible;
+        transition: .4s;
+        transform: perspective(1000px) translateZ(128px) translateY(-4px);
+    }
 
     .header {
     position: relative;
