feat: make profile page, usable and nav for 4 pages + adjust Form.tsx for all files used

--- a/src/profile/ProfileSetting.css
+++ b/src/profile/ProfileSetting.css
@@ -10,11 +10,16 @@
 
 }
 .nav-item:hover{
-  transform: perspective(1000px) translateZ(12px) translateX(24px);
+  transform: perspective(1000px) translateZ(12px) translateX(12px);
   text-decoration: underline;
   transition: .6s;
 }
 
 @media (max-width: 768px) {
   
+.nav-item:hover{
+  transform: perspective(1000px) translateZ(12px) translateY(-4px);
+  text-decoration: underline;
+  transition: .6s;
+}
 }
