feartt: make dropdown component for EditObject in Profile Setting and change theme for Register/Login to more Orangey

--- a/src/login/Login.css
+++ b/src/login/Login.css
@@ -5,4 +5,11 @@
     /* background-color: red; */
     border: red;
     stroke: red;
+
+   
+}
+*{
+    box-sizing: border-box;
+    padding: 0px;
+    margin: 0px;
 }
